# ChineseNanoGPT

./: .gitignore  README.md  model.py  pyproject.toml  sample.py  train.py
data/: prepare.py
